working text enter animation on click

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "@georgedoescode/spline": "^1.0.1",
     "dat.gui": "^0.7.7",
+    "gsap": "^3.7.1",
     "simplex-noise": "^2.4.0",
     "stats.js": "^0.17.0"
   }
